--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "@google-cloud/storage": "^7.16.0",
+    "cores": "^0.8.5",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.2"
   }
 }
